; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/boot/compressed/extr_kaslr_64.c_add_identity_map.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/boot/compressed/extr_kaslr_64.c_add_identity_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMD_SIZE = common dso_local global i32 0, align 4
@mapping_info = common dso_local global i32 0, align 4
@top_level_pgt = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_identity_map(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = add i64 %6, %7
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i32, i32* @PMD_SIZE, align 4
  %11 = call i64 @round_down(i64 %9, i32 %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* @PMD_SIZE, align 4
  %14 = call i64 @round_up(i64 %12, i32 %13)
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* %5, align 8
  %17 = icmp uge i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %25

19:                                               ; preds = %2
  %20 = load i64, i64* @top_level_pgt, align 8
  %21 = inttoptr i64 %20 to i32*
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @kernel_ident_mapping_init(i32* @mapping_info, i32* %21, i64 %22, i64 %23)
  br label %25

25:                                               ; preds = %19, %18
  ret void
}

declare dso_local i64 @round_down(i64, i32) #1

declare dso_local i64 @round_up(i64, i32) #1

declare dso_local i32 @kernel_ident_mapping_init(i32*, i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
